# utb_fai

./: .gitmodules
AK9EV/proj/: CMakeLists.txt  README.md  main.cpp
AK9EV/proj/include/simulator/: Simulator.hpp
AK9EV/proj/include/simulator/algorithm/: Particle.hpp  Swarm.hpp
AK9EV/proj/include/simulator/function/: DeJong1St.hpp  DeJong2Nd.hpp  FunctionFactory.hpp  IFunction.hpp  Rastrigin.hpp  Schweffel.hpp
AK9EV/proj/include/simulator/structure/: Point.hpp
AK9EV/proj/output/: komplet.xlsx  psu_dejong1_10dim.csv  psu_dejong1_30dim.csv  psu_dejong2_10dim.csv  psu_dejong2_30dim.csv  psu_rastrigin_10dim.csv  psu_rastrigin_30dim.csv  psu_schweffel_10dim.csv  psu_schweffel_30dim.csv  trubka_technicka_zprava.docx
AK9EV/proj/source/simulator/: Simulator.cpp
AK9EV/proj/source/simulator/algorithm/: Particle.cpp  Swarm.cpp
AK9EV/proj/source/simulator/function/: DeJong1St.cpp  DeJong2Nd.cpp  FunctionFactory.cpp  IFunction.cpp  Rastrigin.cpp  Schweffel.cpp
AK9EV/proj/source/simulator/structure/: Point.cpp
AK9PV/: .gitignore
AK9PV/proj1/: main.cu
AK9PV/proj2/: main.cu
AK9PV/proj3/: CMakeLists.txt  Readme.md  main.cu
